# iam-audit-lab

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
analyzers/: __init__.py  aws_access_key_analyzer.py  aws_iam_change_history.py  aws_password_policy_analyzer.py  aws_trust_policy_analyzer.py  azure_rbac_analyzer.py  gcp_service_account_analyzer.py  iam_policy_analyzer.py  oauth_app_analyzer.py  privilege_escalation_detector.py  scp_analyzer.py
cli/: __init__.py  audit.py  cloudtrail_iam_audit.py  commands.py  continuous_audit.py  main.py
docs/: audit-methodology.md  iam-security-model.md  overview.md
iam_audit_lab_cli/: __init__.py  cli.py  main.py  report.py
providers/: __init__.py  aws_iam_collector.py  aws_policy_simulator.py  gcp.py
reports/: __init__.py  generator.py  json_report.py  markdown.py  posture_score.py  security_findings_report.py
schemas/: __init__.py  identity.py
tests/: __init__.py  test_analyze_inactive_cli.py  test_analyze_inactive_json_cli.py  test_analyze_mfa_cli.py  test_analyze_mfa_json_output.py  test_analyze_policy_json_cli.py  test_analyze_policy_json_format.py  test_analyze_policy_only_failing_cli.py  test_analyze_privileges_fail_on_severity.py  test_analyze_privileges_json.py  test_analyze_privileges_output.py  test_analyzers.py  test_aws_access_key_analyzer.py  test_aws_password_policy_analyzer.py  test_aws_policy_simulator.py  test_aws_trust_policy_analyzer.py  test_azure_identity_collector.py  test_azure_rbac_analyzer.py  test_cli.py  test_cli_analyze_inactive.py  test_cli_analyze_inactive_output.py  test_cli_analyze_inactive_provider_filter.py  test_cli_analyze_mfa_fail_on_severity.py  test_cli_analyze_mfa_output.py  test_cli_analyze_policy.py  test_cli_analyze_policy_output.py  test_cli_analyze_privileges.py  test_cli_identity_input_validation.py  test_cli_policy_analysis.py  test_collect_identities_json_cli.py  test_collect_identities_provider_filter.py  test_drift_analyzer.py  (+16 more)
(+19 files in other folders)
